--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
@@ -32,7 +32,7 @@
           class="select-account-footer"
           *ngIf="!standalone">
           <pa-button
-            kind="inverted"
+            aspect="basic"
             (click)="logout()">
             {{ 'user.logout' | translate }}
           </pa-button>
