--- a/libs/common/src/lib/progress-bar/progress-bar.component.html
+++ b/libs/common/src/lib/progress-bar/progress-bar.component.html
@@ -1,5 +1,8 @@
-<div [class]="'progress-bar progress-bar-' + track">
+<div
+  class="progress-bar"
+  [class]="'progress-bar-' + track">
   <div
     class="progress"
+    [class.indeterminate]="isIndeterminate"
     [style.width.%]="progress"></div>
 </div>
