--- a/libs/common/src/lib/progress-bar/progress-bar.component.scss
+++ b/libs/common/src/lib/progress-bar/progress-bar.component.scss
@@ -1,15 +1,85 @@
+@import 'apps/dashboard/src/variables';
+
+:host {
+  display: block;
+  width: 100%;
+}
+
 .progress-bar {
-  height: 5px;
+  height: rhythm(0.5);
+
   &-white {
-    background-color: #fff;
+    background-color: $color-light-stronger;
   }
   &-gray {
-    background-color: var(--stf-gray-lighter);
+    background-color: $color-neutral-lighter;
   }
 
   .progress {
     height: 100%;
-    transition: width 0.1s linear;
-    background-color: var(--stf-primary);
+    transition: width $duration-superfast linear;
+
+    &:not(.indeterminate) {
+      background-color: $color-primary-regular;
+    }
+
+    &.indeterminate {
+      overflow: hidden;
+      position: relative;
+      width: 100%;
+
+      &::before {
+        content: '';
+        position: absolute;
+        background-color: $color-primary-regular;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        will-change: left, right;
+        animation: indeterminate-progress 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        background-color: $color-primary-regular;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        will-change: left, right;
+        animation: indeterminate-progress-back 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+        animation-delay: 1.15s;
+        z-index: 1;
+      }
+    }
+  }
+}
+
+@keyframes indeterminate-progress {
+  0% {
+    left: -35%;
+    right: 100%;
+  }
+  60% {
+    left: 100%;
+    right: -90%;
+  }
+  100% {
+    left: 100%;
+    right: -90%;
+  }
+}
+
+@keyframes indeterminate-progress-back {
+  0% {
+    left: -200%;
+    right: 100%;
+  }
+  60% {
+    left: 107%;
+    right: -8%;
+  }
+  100% {
+    left: 107%;
+    right: -8%;
   }
 }
