Don't hide the table on select all
  - keep the table visible on select all but in grey and remove the checkbox
  - improve file selection page style

--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -25,17 +25,22 @@
     </form>
   </div>
   <div
-    *ngIf="!isSelectingAll"
     class="body"
     #scroll>
     <table>
       <tr *ngFor="let resource of resources | async">
         <td>
           <pa-checkbox
+            *ngIf="!isSelectingAll"
             [value]="selection.isSelected(resource)"
             (valueChange)="toggle(resource)">
             {{ resource.title }}
           </pa-checkbox>
+          <span
+            *ngIf="isSelectingAll"
+            class="body-m disabled">
+            {{ resource.title }}
+          </span>
         </td>
       </tr>
     </table>
