[sc-5612] improvements on nuclia desktop app (#801)
* Make logout button as basic secondary on account selection page

* Improve history

  - merge active uploads and uploads history
  - fix progress-bar component:
    - use sistema colors and units
    - add indeterminate state when progress is null or undefined
    - use it in dashboard upload progress dialog
  - Add clear history button

* Move server selection on its own route

* Don't hide the table on select all

  - keep the table visible on select all but in grey and remove the checkbox
  - improve file selection page style

* Update version

--- a/apps/desktop/src/app/main-layout/sidebar.component.html
+++ b/apps/desktop/src/app/main-layout/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <ng-container *ngIf="syncServer | async">
+  <ng-container *ngIf="(isServerPage | async) === false">
     <div class="upload-menu">
       <div class="upload-title">{{ 'upload.data' | translate }}:</div>
       <ul>
@@ -56,14 +56,10 @@
 
     <div class="history-menu">
       <ul>
-        <li (click)="goToHistory()">
+        <li
+          routerLink="/history"
+          routerLinkActive="active">
           {{ 'history.title' | translate }}
-          <pa-icon
-            name="chevron-right"
-            size="small"></pa-icon>
-        </li>
-        <li (click)="goToHistory(true)">
-          {{ 'history.active' | translate }}
           <pa-icon
             name="chevron-right"
             size="small"></pa-icon>
