indexer_slow_replicas is deprecated, use max_dedicated_processors instead

--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -20,8 +20,8 @@
   </pa-input>
   <pa-input
     type="number"
-    formControlName="indexer_slow_replicas">
-    Replicas indexer slow
+    formControlName="max_dedicated_processors">
+    Max dedicated processors
   </pa-input>
   <pa-select
     label="Zone"
