Refactor limit form
  - rethink and implement a different way to set the limits in the limits form (can be `number > 0`,` -1` or `null`)
  - provide an option to reset all limits to default values and to remove limits

--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -6,6 +6,7 @@
   <pa-select
     label="Type"
     formControlName="type">
+    <pa-option value="stash-trial">Trial</pa-option>
     <pa-option value="stash-basic">Basic</pa-option>
     <pa-option value="stash-team">Teams</pa-option>
     <pa-option value="stash-enterprise">Enterprise</pa-option>
