Add trial_expiration_date management

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -27,6 +27,10 @@
         Type:
         <strong>{{ (account | async)?.type }}</strong>
       </div>
+      <div *ngIf="(account | async)?.type === 'stash-trial' && !!(account | async)?.trial_expiration_date">
+        Trial expiration date:
+        <strong>{{ (account | async)?.trial_expiration_date | date: 'yyyy-MM-dd' }}</strong>
+      </div>
       <div>
         Max kbs:
         <strong>{{ (account | async)?.stashes?.max_stashes }}</strong>
