--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -14,6 +14,11 @@
     <pa-option value="stash-developer">Developer</pa-option>
     <pa-option value="stash-startup">Startup</pa-option>
   </pa-select>
+
+  <pa-date-picker
+    *ngIf="isTrial"
+    label="Trial expiration date"
+    formControlName="trial_expiration_date"></pa-date-picker>
   <pa-input
     type="number"
     formControlName="kbs">
