Update blocked features

--- a/apps/manager-v2/src/app/manage-accounts/account-details/blocked-features/blocked-features.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/blocked-features/blocked-features.component.html
@@ -6,7 +6,7 @@
     *ngFor="let feature of blockedFeatures.controls | keyvalue"
     [formControlName]="feature.key"
     [value]="feature.value">
-    {{ feature.key }}
+    {{ feature.key | featureName }}
   </pa-checkbox>
   <nma-form-footer
     [disabled]="blockedFeatures.pristine || isSaving"
