--- a/apps/manager-v2/src/styles.scss
+++ b/apps/manager-v2/src/styles.scss
@@ -104,6 +104,19 @@ form section {
   gap: rhythm(2);
   max-width: rhythm(64);
 
+  .radio-limit-container {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    height: rhythm(6);
+  }
+
+  .limit-container {
+    align-items: center;
+    display: flex;
+    gap: rhythm(1);
+  }
+
   footer {
     display: flex;
     gap: rhythm(2);
