--- a/apps/dashboard/src/app/account/account-users/account-users.component.html
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.html
@@ -25,41 +25,21 @@
       {{ 'accounts.add_user_input' | translate }}
     </pa-input>
     <pa-button
-      size="small"
       [disabled]="email.invalid"
       (click)="addUser()">
       {{ 'account.add_user' | translate }}
     </pa-button>
   </div>
 
-  <table
-    class="user-table mat-elevation-z4"
-    mat-table
-    [dataSource]="users">
-    <ng-container matColumnDef="user">
-      <th
-        mat-header-cell
-        *matHeaderCellDef>
-        {{ 'generic.user' | translate }}
-      </th>
-      <td
-        mat-cell
-        *matCellDef="let user">
-        {{ user.name }} – {{ user.email }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="role">
-      <th
-        class="user-role"
-        mat-header-cell
-        *matHeaderCellDef>
-        {{ 'generic.role' | translate }}
-      </th>
-      <td
-        class="user-role"
-        mat-cell
-        *matCellDef="let user">
+  <pa-table columns="auto 180px 110px">
+    <pa-table-header>
+      <pa-table-cell header>{{ 'generic.user' | translate }}</pa-table-cell>
+      <pa-table-cell header>{{ 'generic.role' | translate }}</pa-table-cell>
+      <pa-table-cell header></pa-table-cell>
+    </pa-table-header>
+    <pa-table-row *ngFor="let user of users">
+      <pa-table-cell>{{ user.name }} – {{ user.email }}</pa-table-cell>
+      <pa-table-cell>
         <nsi-dropdown-button
           size="small"
           aspect="basic"
@@ -75,18 +55,8 @@
             {{ role.value | translate }}
           </pa-option>
         </pa-dropdown>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th
-        class="user-actions"
-        mat-header-cell
-        *matHeaderCellDef></th>
-      <td
-        class="user-actions"
-        mat-cell
-        *matCellDef="let user">
+      </pa-table-cell>
+      <pa-table-cell>
         <pa-button
           *ngIf="!isItMe(user.id)"
           aspect="basic"
@@ -96,14 +66,7 @@
           (click)="deleteUserConfirm(user)">
           {{ 'generic.delete' | translate }}
         </pa-button>
-      </td>
-    </ng-container>
-
-    <tr
-      mat-header-row
-      *matHeaderRowDef="columns"></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: columns"></tr>
-  </table>
+      </pa-table-cell>
+    </pa-table-row>
+  </pa-table>
 </div>
