--- a/apps/dashboard/src/app/account/account-users/account-users.component.scss
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.scss
@@ -23,40 +23,9 @@
     align-items: center;
     display: flex;
     gap: rhythm(1);
-    margin-bottom: 48px;
+    margin: rhythm(3) 0 rhythm(5);
     input {
       min-width: 240px;
-    }
-  }
-
-  .user-table {
-    width: 100%;
-
-    .user-role {
-      width: 185px;
-      text-align: center;
-
-      button {
-        @include reset-button();
-        cursor: pointer;
-        &[disabled] {
-          cursor: default;
-        }
-        margin-top: 6px; // Vertical align
-        svg {
-          display: block;
-        }
-        .active {
-          path {
-            fill: var(--stf-primary);
-          }
-        }
-      }
-    }
-
-    .user-actions {
-      width: 110px;
-      text-align: right;
     }
   }
 }
