[sc-5763] adjust manager app to address latest features (#809)
* indexer_slow_replicas is deprecated, use max_dedicated_processors instead

* Update limits model

Limits fields `monthly_limit_chars_processed` and `monthly_limit_non_media_files_processed` are no longer needed, so both could be removed from the limits form

* Refactor limit form

  - rethink and implement a different way to set the limits in the limits form (can be `number > 0`,` -1` or `null`)
  - provide an option to reset all limits to default values and to remove limits

* Add trial_expiration_date management

* Update blocked features

* max_kbs as same behaviour as limits: 3 possible values

`-1` for unlimited, `null` for default value, and `number > 0` for specified limit

* Add rules for account type modification

  - A TRIAL account should be upgradable to ENTERPRISE, and enterprise can be downgraded to trial. No other changes allowed
  - Update backup (used for cancel) after saving configuration
  - Update date-picker to prevent save button to be enabled without change
  - Fix ability to set `trial_expiration_date: null`

* Fix number inputs returning string instead of number

* Fix unit tests

--- a/apps/manager-v2/src/app/manage-accounts/account-details/limits/limits.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/limits/limits.component.html
@@ -1,41 +1,68 @@
-<form
-  [formGroup]="limitsForm"
-  (ngSubmit)="save()">
-  <section
-    formGroupName="processing"
-    *ngIf="(limitsForm.controls.processing.controls | keyvalue).length > 0">
-    <h3>Processing limits</h3>
-    <pa-input
-      type="number"
-      *ngFor="let limit of limitsForm.controls.processing.controls | keyvalue"
-      [formControlName]="limit.key">
-      {{ limit.key }}
-    </pa-input>
-  </section>
+<div class="limit-form">
+  <div class="reset-actions">
+    <pa-button
+      aspect="basic"
+      kind="primary"
+      [disabled]="isSaving"
+      (click)="resetAllToDefault()">
+      Reset all to default
+    </pa-button>
+    <pa-button
+      aspect="basic"
+      kind="destructive"
+      [disabled]="isSaving"
+      (click)="removeLimits()">
+      Remove limits
+    </pa-button>
+  </div>
 
-  <section
-    formGroupName="upload"
-    *ngIf="(limitsForm.controls.upload.controls | keyvalue).length > 0">
-    <h3>Upload limits</h3>
-    <pa-input
-      type="number"
-      *ngFor="let limit of limitsForm.controls.upload.controls | keyvalue"
-      [formControlName]="limit.key">
-      {{ limit.key }}
-    </pa-input>
-  </section>
-  <section
-    formGroupName="usage"
-    *ngIf="(limitsForm.controls.usage.controls | keyvalue).length > 0">
-    <h3>Usage limits</h3>
-    <pa-input
-      type="number"
-      *ngFor="let limit of limitsForm.controls.usage.controls | keyvalue"
-      [formControlName]="limit.key">
-      {{ limit.key }}
-    </pa-input>
-  </section>
-  <nma-form-footer
-    [disabled]="limitsForm.pristine || limitsForm.invalid || isSaving"
-    (cancel)="reset()"></nma-form-footer>
-</form>
+  <form
+    [formGroup]="limitsForm"
+    (ngSubmit)="save()">
+    <ng-container *ngFor="let group of limitsForm.controls | keyvalue">
+      <section
+        [formGroupName]="group.key"
+        *ngIf="(group.value.controls | keyvalue).length > 0">
+        <h3 style="text-transform: capitalize">{{ group.key }} limits</h3>
+        <div
+          *ngFor="let limit of group.value.controls | keyvalue"
+          [formGroupName]="limit.key">
+          <label
+            class="title-xxs"
+            [for]="'limit-group-' + limit.key">
+            {{ limit.key }}
+          </label>
+
+          <div class="radio-limit-container">
+            <pa-radio-group
+              [id]="'limit-group-' + limit.key"
+              [formControlName]="limit.key + '-radio'">
+              <pa-radio value="unlimited">Unlimited</pa-radio>
+              <pa-radio value="limit">Limit</pa-radio>
+            </pa-radio-group>
+            <div
+              *ngIf="getRadioValue(group.key, limit.key) === 'limit'"
+              class="limit-container">
+              <pa-input
+                type="number"
+                externalLabel
+                formControlName="limit"></pa-input>
+              <pa-button
+                size="small"
+                icon="reload"
+                paTooltip="Reset to default"
+                aspect="basic"
+                (click)="reset(group.key, limit.key)">
+                Reset to default
+              </pa-button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </ng-container>
+
+    <nma-form-footer
+      [disabled]="limitsForm.pristine || limitsForm.invalid || isSaving"
+      (cancel)="cancel()"></nma-form-footer>
+  </form>
+</div>
