--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -4,26 +4,6 @@
   (ngSubmit)="save()">
   <pa-input formControlName="email">Email</pa-input>
   <pa-select
-    label="Type"
-    formControlName="type">
-    <pa-option value="stash-basic">Basic</pa-option>
-    <pa-option value="stash-team">Teams</pa-option>
-    <pa-option value="stash-enterprise">Enterprise</pa-option>
-    <pa-option value="stash-business">Business</pa-option>
-    <pa-option value="stash-developer">Developer</pa-option>
-    <pa-option value="stash-startup">Startup</pa-option>
-  </pa-select>
-  <pa-input
-    type="number"
-    formControlName="kbs">
-    Available knowledge boxes
-  </pa-input>
-  <pa-input
-    type="number"
-    formControlName="indexer_slow_replicas">
-    Replicas indexer slow
-  </pa-input>
-  <pa-select
     label="Zone"
     formControlName="zone"
     readonly>
@@ -33,7 +13,71 @@
       {{ zone.title }}
     </pa-option>
   </pa-select>
+  <div class="account-type-container">
+    <pa-select
+      readonly
+      label="Account type"
+      help="ALL testing account MUST be Trial"
+      formControlName="type">
+      <pa-option value="stash-trial">Trial</pa-option>
+      <pa-option value="stash-basic">Basic</pa-option>
+      <pa-option value="stash-team">Teams</pa-option>
+      <pa-option value="stash-enterprise">Enterprise</pa-option>
+      <pa-option value="stash-business">Business</pa-option>
+      <pa-option value="stash-developer">Developer</pa-option>
+      <pa-option value="stash-startup">Startup</pa-option>
+    </pa-select>
 
+    <pa-button
+      *ngIf="configForm.controls.type.value === 'stash-trial' || configForm.controls.type.value === 'stash-enterprise'"
+      (click)="toggleAccountType()">
+      {{ configForm.controls.type.value === 'stash-trial' ? 'Upgrade to Enterprise' : 'Downgrade to Trial' }}
+    </pa-button>
+  </div>
+
+  <pa-date-picker
+    *ngIf="isTrial"
+    label="Trial expiration date"
+    formControlName="trial_expiration_date"></pa-date-picker>
+  <pa-input
+    type="number"
+    formControlName="max_dedicated_processors">
+    Max dedicated processors
+  </pa-input>
+
+  <div>
+    <label
+      class="title-xxs"
+      for="max-kbs">
+      Max knowledge boxes available
+    </label>
+    <div
+      class="radio-limit-container"
+      formGroupName="kbs">
+      <pa-radio-group
+        id="max-kbs"
+        formControlName="kbs_radio">
+        <pa-radio value="unlimited">Unlimited</pa-radio>
+        <pa-radio value="limit">Limit</pa-radio>
+      </pa-radio-group>
+      <div
+        *ngIf="configForm.controls.kbs.controls.kbs_radio.value === 'limit'"
+        class="limit-container">
+        <pa-input
+          type="number"
+          externalLabel
+          formControlName="max_kbs"></pa-input>
+        <pa-button
+          size="small"
+          icon="reload"
+          paTooltip="Reset to default"
+          aspect="basic"
+          (click)="resetMaxKbsToDefault()">
+          Reset to default
+        </pa-button>
+      </div>
+    </div>
+  </div>
   <nma-form-footer
     [disabled]="configForm.pristine || configForm.invalid || isSaving"
     (cancel)="reset()"></nma-form-footer>
