Update resource profile form
  - Use date-picker instead of simple input for created and modified field
  - Add a textarea allowing to save (and display) extra metadata on a resource
  - Fix resource page layout, preventing the scrollbar to be on top of the content

--- a/libs/common/src/lib/resources/edit-resource/common-page-layout.scss
+++ b/libs/common/src/lib/resources/edit-resource/common-page-layout.scss
@@ -25,6 +25,8 @@
 .scrollable-area {
   height: calc(100vh - var(--app-topbar-height) - #{$height-header} - #{$padding-top-page-container});
   overflow: auto;
+  padding-bottom: rhythm(2);
+  padding-right: rhythm(2); // give space for the scrollbar
   width: $width-page-content-large;
 
   &.with-right-panel {
