Display extra metadata using json-viewer

--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.scss
@@ -73,6 +73,10 @@ form > div {
   }
 }
 
+.extra-metadata-container {
+  margin-top: rhythm(1);
+}
+
 .right-panel-container {
   margin-top: $line-height-title-s + rhythm(0.5);
   width: rhythm(40);
