--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
@@ -158,11 +158,18 @@
           for="extra">
           {{ 'resource.extra-metadata' | translate }}
         </label>
-        <pa-textarea
-          id="extra"
-          formControlName="extra"
-          externalLabel
-          [rows]="5"></pa-textarea>
+        <pa-toggle [(value)]="editExtraMetadata">Edit extra metadata</pa-toggle>
+        <div class="extra-metadata-container">
+          <pa-textarea
+            *ngIf="editExtraMetadata"
+            id="extra"
+            formControlName="extra"
+            externalLabel
+            [rows]="5"></pa-textarea>
+          <div *ngIf="!editExtraMetadata">
+            <nsi-json-viewer [json]="extraMetadata"></nsi-json-viewer>
+          </div>
+        </div>
       </section>
     </form>
   </div>
