[sc-5835] Support autofilter option in widget

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -108,6 +108,12 @@
             formControlName="useSynonyms">
             {{ 'stash.widgets.synonyms' | translate }}
           </pa-toggle>
+          <pa-toggle
+            labelOnRight
+            help="stash.widgets.autofilter.help"
+            formControlName="autofilter">
+            {{ 'stash.widgets.autofilter' | translate }}
+          </pa-toggle>
         </div>
       </section>
       <section class="snippet">
