--- a/apps/dashboard/src/app/account/account-nua/nua-activity/nua-activity.component.html
+++ b/apps/dashboard/src/app/account/account-nua/nua-activity/nua-activity.component.html
@@ -1,6 +1,15 @@
 <div class="nua-activity">
   <header class="nua-activity-title">
-    <h1>{{ 'account.nua_key_activity_title' | translate: { key: (client | async)?.title } }}</h1>
+    <div class="title-and-back">
+      <pa-button
+        icon="arrow-left"
+        aspect="basic"
+        routerLink="../..">
+        {{ 'generic.back' | translate }}
+      </pa-button>
+      <h1>{{ 'account.nua_key_activity_title' | translate: { key: (client | async)?.title } }}</h1>
+    </div>
+
     <small>{{ 'account.nua_key_activity_subtitle' | translate }}</small>
   </header>
 
