track time-to-interact

--- a/libs/search-widget/src/widgets/search-widget/SearchResults.scss
+++ b/libs/search-widget/src/widgets/search-widget/SearchResults.scss
@@ -24,6 +24,10 @@
   width: 100%;
 }
 
+.results-end {
+  display: none;
+}
+
 @media (min-width: 1200px) {
   .results-container {
     flex-direction: row;
